--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -6,7 +6,7 @@
 
 ==Windows==
   # Download the windows installer from the download page.
-  # Launch the installer, then follow instructions. By default, the program will be installed to "C:/Program Files/Grabber".
+  # Launch the installer, then follow instructions. By default, the program will be installed to "C:/Program Files/Grabber" (note that all your settings will be stored in "C:/Users/%USERNAME%/Grabber").
   # Go to the installation folder, then launch "Grabber.exe".
 
 
@@ -15,18 +15,16 @@
 
 ==Settings==
 If you have ignored the window that opened at first launch, the first thing to do is to set them. To do so, go to "File > Options".
-  * The "General" part is for general settings (language, etc.).
-  * The "Sources" part is to set the number of columns and the number of images to be retrieved from each site. You can also set the priority of APIs. For example, if you have three files for "danbooru.donmai.us" (one for each retrieving method: XML, JSON and Regex), it will use the one specified in the "Source 1" field. I advice you leaving this to XML > JSON > Regex.
-  * The "Save" part must be filled up if you want to save pictures on your computer using the program. Set the "Folder" field to the location you want your images to be saved, and fill the "Filename" field using informations below it (example: "%artist%/%copyright%/%character%/%md5%.%ext%"). Make sure your format is valid before continuing.
-  * The three sub parts are here to tell the program what to do if there are missing or multiple informations about an image (for example, no artists, or multiple characters).
+Then, go the the "Save" part. This part part must be filled up if you want to save pictures on your computer using the program. Set the "Folder" field to the location you want your images to be saved, and fill the "Filename" field. For more information about the "Filename" field, you can check this: Filename. Make sure your format is valid before continuing.
 Once finished, you can press the "Ok" button.
 
 ==Sources==
-The second thing to do is to choose from where you want to download pictures. To do so, click on the "Sources" button on the bottom of the window. Just check the imageboards you want to get informations from, then press ok.
+The second thing to do is to choose from where you want to download pictures. By default it will take the first (alphabetically) in the list, so [http://behoimi.org/ Behoimi]. To change them, click on the "Sources" button on the bottom of the window. Just check the imageboards you want to get informations from, then press ok.
 
 *Note:* if you select multiple imageboards, they will be put in one column by default. I advice you changing this by editing the "Columns" settings in the options.
+You can also merge all results to remove duplicates checking the "Merge results" option at the bottom of the window.
 
 ==Search fields==
 The upper part of the window is "divided" in two.
   * The search form: to make searches using tags. You can add your own tags to auto-completion editing the "words.txt" file. To insert a date, click the button. Browse other pages by changing the page value.
-  * Hidden form: show it by clicking the "+" button. Here, you have to fields to change quickly the options (images per page and columns), sources checkboxes and "Post-filtering". Post-filtering allow you to bypass the two-tags limitation on danbooru for example, by adding additional tags or metas (source, id, height, etc.) in this field. Note that none of these fields will be saved at exit.
+  * Hidden form: show it by clicking the "+" button. Here, you have some fields to change quickly the options (images per page and columns), sources checkboxes and "Post-filtering". Post-filtering allow you, for example, to bypass the two-tags limitation on danbooru, by adding additional tags or metas (source, id, height, etc.) in this field. Note that none of these fields will be saved at exit.
