--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -15,7 +15,7 @@
 
 ==Settings==
 If you have ignored the window that opened at first launch, the first thing to do is to set them. To do so, go to "File > Options".
-Then, go the the "Save" part. This part part must be filled up if you want to save pictures on your computer using the program. Set the "Folder" field to the location you want your images to be saved, and fill the "Filename" field. For more information about the "Filename" field, you can check this: Filename. Make sure your format is valid before continuing.
+Then, go the the "Save" part. This part part must be filled up if you want to save pictures on your computer using the program. Set the "Folder" field to the location you want your images to be saved, and fill the "Filename" field. For more information about the "Filename" field, you can check [http://code.google.com/p/imgbrd-grabber/wiki/Filename this]. Make sure your format is valid before continuing.
 Once finished, you can press the "Ok" button.
 
 ==Sources==
