--- a/wiki/Database.wiki
+++ b/wiki/Database.wiki
@@ -12,30 +12,29 @@ First, go to the "Commands" tab of the Options window.
 Here, you have three fields: "Initialization", "Image" and "Tag".
 
 ==Initialization==
-Since we are here talking databases, we must first connect to this database. For example, for a MySQL database, the command is (on windows) "path/to/mysql/file --user=USER_NAME --password=PASSWORD DATABASE_NAME" (if there are spaces in the path to mysql, remember to surround it by quotes). Of course you will have to replace "USER_NAME" by your user name, "PASSWORD" by your password and DATABASE_NAME by the name of your database. Note that the username/password is often "root" with an empty password if your database is a local one.
+Since we are here talking databases, we must first connect to this database.
+
+For example, for a MySQL database, the command is (on windows) "path/to/mysql/file --user=USER_NAME --password=PASSWORD DATABASE_NAME" (if there are spaces in the path to mysql, remember to surround it by quotes). Of course you will have to replace "USER_NAME" by your user name, "PASSWORD" by your password and DATABASE_NAME by the name of your database. Note that the username/password is often "root" with an empty password if your database is a local one.
+
 So here you have, for example:
 {{{
 "C:/Program Files/wamp/bin/mysql/mysql5.1.36/bin/mysql.exe" --user=root --password= imageboard
 }}}
-And now, you have your connection ready !
+And now, you have your connection to the database ready !
 
 ==Image==
 Here, you now just have to put the query for adding an image in the database, using the same tokens as for saving images.
 *Do not forget to put an ";" at the end of your query !*
+
 For example :
 <code language="sql">INSERT INTO images(id, rating, tags) VALUES(NULL, '%rating%', '%tags%');</code>
 
 ==Tag==
 Here, you now just have to put the query for adding a tag in the database, using the tokens written under the field.
 *Do not forget to put an ";" at the end of your query !*
+
 For example :
 <code language="sql">INSERT INTO tags(name, type) VALUES('%tag%', '%type%');</code>
 
 = Gelbooru =
-==Image==
-Work in progress...
-<code language="sql">UPDATE post_count SET pcount=pcount+1 WHERE access_key="posts";</code>
-
-==Tag==
-You must change tag_index.tag index and set it to be unique first.
-<code language="sql">INSERT INTO tag_index(tag, index_count) VALUES("%tag%", 1) ON DUPLICATE KEY UPDATE index_count = index_count+1;</code>
+Using this, you can update a local gelbooru-based booru. Check the [http://code.google.com/p/imgbrd-grabber/wiki/Gelbooru Gelbooru wiki page] for details.
