--- a/wiki/Filename.wiki
+++ b/wiki/Filename.wiki
@@ -28,7 +28,9 @@ You can also add custom tokens. To do so, go to the options, "save" part and "cu
 _Note: custom tokens with an already used name (such as %character%) will be used first.
 
 = Conditionals =
-You can use conditionals in your filename, using strict inequality signs (< and >). If any token found in the conditional does not exist or is empty, nothing into it will be displayed.
+You can use conditionals in your filename, using strict inequality signs (< and >).
+== Token conditionals ==
+If any token found in the conditional does not exist or is empty, nothing into it will be displayed.
 Since an example is worth a thousand words:
 {{{
 image - <%artist% some text <%nothing% another text> test><<%character% some text> text %nothing%> %md5%.%ext%
@@ -41,6 +43,7 @@ If the image doesn't have any artist, it will be:
 {{{
 image -  %md5%.%ext%
 }}}
+== Tag conditionals ==
 You can also test directly the presence of a tag surrounding him with quotes. For example:
 {{{
 image - <image contains the tag "solo"><"group" is one of the image tags> %md5%.%ext%
