--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,6 +1,10 @@
-#summary Imgbrd-grabber's changelog from v1.0 to v3.1.2
+#summary Imgbrd-grabber's changelog from v1.0 to v3.1.3
 
 = 3.1 =
+== 3.1.3 ==
+  * Fixed single images download.
+  * Added single images delete/download selected and loading/saving.
+  * Fixed batch download details button.
 == 3.1.2 ==
   * Added warning in the favorites part.
   * Fixed ignored tags (normal and wildcard).
