--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,6 +1,15 @@
-#summary Imgbrd-grabber's changelog from v1.0 to v3.1.3
+#summary Imgbrd-grabber's changelog from v1.0 to v3.1.4
 
 = 3.1 =
+== 3.1.4 ==
+  * Fixed the biggest memory leak of the program.
+  * New sites can now be directly used, without having to restart (issue #107).
+  * Settings are now backed up for each version (issue #107).
+  * Added setting to choose between new and old behavior when clicking on "get this page" (issue #99).
+  * Removed beginning "www." and "chan." for quick sources check boxes (issue #107).
+  * Fixed next and last page buttons.
+  * Fixed crashes when closing an image window (issue #105).
+  * Alt-tab between subwindows is back (issue #105).
 == 3.1.3 ==
   * Fixed single images download.
   * Added single images delete/download selected and loading/saving.
