--- a/wiki/Gelbooru.wiki
+++ b/wiki/Gelbooru.wiki
@@ -1,9 +1,9 @@
 #summary Keep a local gelbooru to browse your downloaded images.
 
 = Introduction =
-First of all, know that using commands can slow down huge batch downloads (a recent computer should take from 100ms to 1s more per image, which is very consequent).
+First of all, know that using commands can slow down huge batch downloads (a recent computer may need from 100ms to 1s more per image, which is very consequent).
 
-_Note: in this wiki, I'll consider that you're using Windows. But on Linux & other OSes, it should be pretty the same (use the cp command instead of copy, LAMP instead of WAMP, etc.)._
+_Note: in this wiki, I'll consider that you're using Windows. But on Linux & other OSes, it should be pretty the same (use the cp command instead of copy, LAMP (linux) / MAMP (mac) instead of WAMP, etc.)._
 
 
 
@@ -11,63 +11,36 @@ _Note: in this wiki, I'll consider that you're using Windows. But on Linux & oth
 
 First, we're going to install WAMP, which contains everithing required to have a local web server.
 
-Go [http://sourceforge.net/projects/wampserver/ here] and download the latest version of WAMP.
-
-Then, install it: "Next", "I accept the agreement" > "Next", "Next", "Next", "Install". It will ask you for "PHP mail parameters". We don't care about them, so just leave the default values and click Next and launch WAMP.
+ # Download the latest version of WampServer here (2.2e as I am writing this): [http://sourceforge.net/projects/wampserver/]
+ # Install it somewhere that doesn’t requires admin rights to write into (for example, the default location c:\wamp)
+ http://image.noelshack.com/fichiers/2012/26/1340898741-wamplocation.png
+ # At the end of the installation, the installer may ask for two things.
+  # First, he will ask you what your favorite browser is. You can leave it to the default value which will be Internet Explorer, or change it to another browser (Firefox, Chrome, etc.).
+  # Finally, he will ask some email settings. Leave the default values, you don’t care about that.
+  http://image.noelshack.com/fichiers/2012/26/1340898741-wampemail.png
+ # Now that WampServer is installed, you should see a little green W in your system tray, near the clock (you may need to expand the tray to see it).
+ http://image.noelshack.com/fichiers/2012/26/1340898741-wampnotification.png
+ # Congratulations! You can visit your local server by going to [http://localhost/ here]!
+ http://image.noelshack.com/fichiers/2012/26/1340898530-wampcheck.png
 
 
 
 = Installing Gelbooru =
 
-So we have a working server installed. You can check that everything works visiting [http://127.0.0.1/ 127.0.0.1] or [http://localhost/ localhost].
-
-Now, we must install Gelbooru. Go [http://gelbooru.com/index.php?page=forum&s=view&id=99 here] and download the latest version from the 0.1 branch (0.1.`*`).
-
-Then, extract it to "C:\Program Files\Wamp\www\gelbooru". You must now configure it and create its database.
-
-Go to [http://localhost/phpmyadmin/ http://localhost/phpmyadmin/]. Username: "root", password: "" (blank). Change the language if you want, then create a database named "gelbooru" with an "utf8_unicode_ci" Collation.
-
-Once done, Go to the "SQL" tab, and fill the text area with
+ # Download the latest version of Gelbooru here (0.1.10 as I am writing this): [http://gelbooru.com/index.php?page=forum&s=view&id=99]
+ # Extract it to the www directory in your WampServer installation folder. You can either extract it to a subfolder or not. If you extract it to a subfolder, the site’s url will be [http://localhost/subfolder/], and if you don’t it will only be [http://localhost/]. It’s your choice, but if you don’t create a subfolder, you must remember to remove all the files in your www folder first. For the end of this tutorial, I’ll consider that you’re *not* using a subfolder.
+ # If you are using linux, give the images and thumbnails folders writable permissions.
+ # Then, go to [http://localhost/phpmyadmin/]. If you have to login, use "root" as username and "" as password (no password).
+ # Then, go to the databases tab and create a database named “gelbooru” with an “utf8_unicode_ci” encoding.
+   Once done, Go to the "SQL" tab, and put this query in the text area:
 {{{
 SET GLOBAL log_bin_trust_function_creators = 1;
 }}}
-Then click "Go".
-
-Now, open the file located at "C:\Program Files\Wamp\www\gelbooru\config.php" with a basic text editor.
-
-Find the line :
-{{{
-$mysql_pass = "test";
-}}}
-And replace it by
-{{{
-$mysql_pass = "";
-}}}
-Replace
-{{{
-$mysql_db = "asdf";
-}}}
-By
-{{{
-$mysql_db = "gelbooru";
-}}}
-Replace
-{{{
-$site_url = "http://127.0.0.1/branches/0.1.10/0.1.10/";
-}}}
-By
-{{{
-$site_url = "http://localhost/gelbooru";
-}}}
-Replace
-{{{
-$site_url3 = "Default Booru";
-}}}
-By (you can change "Localbooru" by the name of your booru)
-{{{
-$site_url2 = $site_url3 = "Localbooru";
-}}}
-And finally add, just before the "?>" at the end of the file
+   Click "Go".
+ # Then, open the file “config.php” with a plain text editor (I don’t recommend using a WYSIWYG editor such as word).
+   <table cellpadding="3"><tr><td border="2">*Replace the line*</td><td>*By*</td></tr><tr><td>`$mysql_pass = "test";`</td><td>`$mysql_pass = "";`</td></tr><tr><td>`$mysql_db = "asdf";`</td><td>`$mysql_db = "gelbooru";`</td></tr><tr><td>`$site_url = "http://127.0.0.1/branches/0.1.10/0.1.10/";`</td><td>`$site_url = "http://localhost";`</td></tr><tr><td>`$site_url3 = "Default Booru";`</td><td>`$site_url2 = $site_url3 = "Localbooru";`</td></tr></table>
+   (you can change "Localbooru" to anything: it will be the name of the booru)
+ # And finally add, just before the "?>" at the end of the file:
 {{{
 $lowerlimit = 20;
 $no_cache = false;
@@ -79,11 +52,11 @@ $new_pthreshold = 0;
 $new_my_tags = '';
 error_reporting(0);
 }}}
-You can of course change those values to whatever you want.
+  You can of course change these values to whatever you want.
+ # Finally, go to [http://localhost/install/] and register your admin account.
+ # If you don’t see any errors the installation went well! As the script suggests, you can now delete the c:\wamp\www\install folder. You can now access your booru by going here: [http://localhost/]
+ # If you still run into errors after adding images, click on the WampServer icon on the system tray, go to "PHP > PHP settings" and uncheck "display errors".
 
-Now, go to [http://localhost/gelbooru/install/ http://localhost/gelbooru/install/] and register your admin account.
-
-The installation is finished! You can now use your booru going [http://localhost/gelbooru/ here]. If you still run into errors after adding images, click on the WAMP icon on the system tray, go to "PHP > PHP settings" and uncheck "display errors".
 
 
 
@@ -93,7 +66,7 @@ Launch Grabber, then open the options window and go to the "Commands" part. Set 
 
 Initialization (note that the mysql version may vary)
 {{{
-"C:\Program Files\Wamp\bin\mysql\mysql5.5.8\bin\mysql.exe" --user=root --password= gelbooru
+"C:\wamp\bin\mysql\mysql5.5.8\bin\mysql.exe" --user=root --password= gelbooru
 }}}
 Image (with initialization)
 {{{
@@ -105,14 +78,8 @@ INSERT INTO tag_index(tag, index_count) VALUES("%tag%", 1) ON DUPLICATE KEY UPDA
 }}}
 Image
 {{{
-C:\Windows\System32\cmd.exe /C copy "%path%" "C:\Program Files\Wamp\www\gelbooru\images\1\%md5%.%ext%"
+C:\Windows\System32\cmd.exe /C copy "%path%" "C:\wamp\www\gelbooru\images\1\%md5%.%ext%"
 }}}
-On Windows Vista and Windows 7, this command just won't work, unless you started Grabber with administrator rights, since Program Files is a protected folder.
-
-So you can do two things:
-  * Start Grabber with administrator rights.
-  * Configure wamp and move the www folder to another location.
-Let's explain the second solution, which is the best one. Move your gelbooru folder somewhere else, for example to "C:\Users\Bionus\Documents\www\gelbooru". Then, click on the WAMP icon in the system stray, then go to the Apache menu and click "httpd.conf". Into this file, look for "C:\Program Files\Wamp\www" and replace it with "C:\Users\Bionus\Documents\www" (for example). You should find it two times. Then, save the file. Click on the WAMP icon and restart all services. Now, you must also change the Image command, and replace "C:\Program Files\Wamp\www\gelbooru" to "C:\Users\Bionus\Documents\www\gelbooru" (for example).
 
 Now, every time you save an image, a copy will be created in your local booru!
 
