--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,6 +1,14 @@
 #summary Imgbrd-grabber's changelog from v1.0 to v3.1.4
 
 = 3.1 =
+== 3.1.5 ==
+  * Lots of bugfixes, especially crashes.
+  * Javascript filenaming.
+  * Vertical separation (issue #50).
+  * Virtual paging.
+  * %score%, %date% and %date:format% tokens.
+  * Shortcuts to save and save as in image window.
+  * Black borders to non-hidden blacklisted images. 
 == 3.1.4 ==
   * Fixed the biggest memory leak of the program.
   * New sites can now be directly used, without having to restart (issue #107).
